@@ -3,7 +3,7 @@ package ch.alpine.sophus.lie.se3;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
-import java.util.Arrays;
+import java.util.List;
 
 import org.junit.jupiter.api.Test;
 
@@ -19,7 +19,7 @@ class Se3GroupElementTest {
   private static void _check(Tensor R, Tensor t) {
     Se3GroupElement g = new Se3GroupElement(R, t);
     Tensor adjoint = g.inverse().adjoint(Tensors.vector(1, 2, 3, 4, 5, 6));
-    assertEquals(Dimensions.of(adjoint), Arrays.asList(6));
+    assertEquals(Dimensions.of(adjoint), List.of(6));
     Tensor ge = g.combine(IdentityMatrix.of(4));
     Chop._10.requireClose(Se3Matrix.rotation(ge), R);
     Chop._10.requireClose(Se3Matrix.rotation(ge), g.rotation());
